--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
 	"name": "@milosworks/biomecf",
 	"type": "module",
 	"private": true,
+	"license": "MIT",
+	"author": {
+		"name": "MilosWorks",
+		"url": "https://github.com/milosworks"
+	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.0.0-beta.6"
 	},
