--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://biomejs.dev/schemas/2.3.10/schema.json",
 	"files": {
-		"includes": ["**", "!node_modules/**"]
+		"includes": ["**", "!node_modules"]
 	},
 	"formatter": {
 		"formatWithErrors": true,
@@ -29,8 +29,7 @@
 		}
 	},
 	"vcs": { "enabled": true, "clientKind": "git" },
-	// Biome does not want to fix plugins being loaded by a config package
-	// "plugins": ["./plugins/no-empty-class-newline.grit"],
+	"plugins": ["./plugins/no-empty-class-newline.grit"],
 	"linter": {
 		"rules": {
 			"recommended": true,
