--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.3.10/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
 	"formatter": {
 		"formatWithErrors": true,
 		"indentStyle": "tab",
@@ -25,8 +25,13 @@
 			}
 		}
 	},
-	"vcs": { "enabled": true, "clientKind": "git" },
-	"plugins": ["./plugins/no-empty-class-newline.grit"],
+	"vcs": {
+		"enabled": true,
+		"clientKind": "git"
+	},
+	// "plugins": [
+	// 	"./plugins/no-empty-class-newline.grit"
+	// ],
 	"linter": {
 		"rules": {
 			"recommended": true,
@@ -81,7 +86,9 @@
 				"noUnusedVariables": {
 					"level": "error",
 					"fix": "unsafe",
-					"options": { "ignoreRestSiblings": true }
+					"options": {
+						"ignoreRestSiblings": true
+					}
 				},
 				"useJsonImportAttributes": "error",
 				"useSingleJsDocAsterisk": {
@@ -164,7 +171,9 @@
 				"noDoubleEquals": {
 					"level": "error",
 					"fix": "safe",
-					"options": { "ignoreNull": true }
+					"options": {
+						"ignoreNull": true
+					}
 				},
 				"noEmptyBlockStatements": "error",
 				"noVar": {
